# rust_function_macros

./: Cargo.toml  PROMPTS.md  README.md
app/: Cargo.toml  gen.sh
app/benches/: my_benchmark.rs
app/src/: exec.rs  lib.rs  linear.rs  macros.rs  macros_new.rs  main.rs  operations.rs
fn_parser/: Cargo.toml
fn_parser/examples/: example_parse.rs
fn_parser/src/: file_parsing.rs  functions.rs  lib.rs
handjam/: Cargo.toml
handjam/benches/: bench.rs
handjam/src/: descriptive_ive.rs  dyn_call.rs  gentest.rs  graph.rs  lib.rs  linear_execution.rs  macros.rs  main.rs  node_description.rs
ive/: Cargo.toml
ive/src/: dyn_call.rs  lib.rs  node_description.rs
ive/tests/: dyn_call_test.rs  more_dyn_call_experiments.rs  templated_dyn_call_conversion_tests.rs  tests.rs
ive_macros/: Cargo.toml
ive_macros/src/: lib.rs  make_dynamicable_work.rs
ive_macros/tests/: test_make_dynamicable.rs  tests.rs
prototype_graph/: Cargo.toml
prototype_graph/src/: lib.rs
prototype_network/: Cargo.toml
prototype_network/src/: description.rs  main.rs
raw_test/: Cargo.toml
raw_test/src/: lib.rs
sample_nodes/: Cargo.toml
sample_nodes/src/: lib.rs
