[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
seq-macro = "0.3.2"
ive = { path = "../ive", version = "0.1.0" }


[dev-dependencies]
criterion = "0.4"

# [[bench]]
# name = "my_benchmark"
# harness = false