[package]
name = "fn_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
quote = "1.0.26"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
syn = { version = "2.0.8", features = ["extra-traits", "full"] }
