[package]
name = "ive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
itertools = "0.10.5"
proc-macro2 = "1"
convert_case = "0.6.0"
